--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -32,10 +32,10 @@
                         <span class="user-icon"></span>
                     </button>
                     <div class="settings-dropdown" id="settings-dropdown">
-                        <div class="settings-user">
+                        <button class="settings-item" id="user-profile-btn">
                             <span class="user-icon"></span>
-                            <span class="user-name">{{ user }}</span>
-                        </div>
+                            <span class="settings-label">{{ user }}</span>
+                        </button>
                         <div class="settings-divider"></div>
                         <button class="settings-item" id="sound-toggle">
                             <span id="sound-icon">&#128264;</span>
