--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -265,6 +265,7 @@
 
     </div>
 
+    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
     <script src="{{ url_for('static', filename='app.js') }}"></script>
 </body>
 </html>
